# pars_proj

./: .gitignore  README.md  del.py  docker-compose.yml  env-example.md  main.py  pyproject.toml  requirements.txt
bot/: Dockerfile  bot_models.py  config.py  main.py  models.py  pyproject.toml
bot/routers/: __init__.py
bot/routers/commands/: __init__.py  base_commands.py  echo.py  source_commands.py  user_commands.py
core/: Dockerfile  __init__.py  config.py
core/models/: __init__.py
core/models/news/: __init__.py  crud.py  schemas.py
core/models/source/: __init__.py  crud.py  schemas.py
core/models/users/: __init__.py  schemas.py
db/: Dockerfile  pyproject.toml  requirements.txt
db/api_v1/api_source_list/: crud.py  schemas.py
db/models/: __init__.py  base.py  db_helper.py  models.py  news_db.py  source_db.py  source_list.py  users_db.py
docker-entrypoint-initdb.d/: init.sql
monitor/: Dockerfile  __init__.py  monitor.py  rss_parser.py  utils.py
