[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["easywoid0 <gar2719@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.35"
aiohttp = "^3.10.8"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
